New territorial management (not using dictionary value sets)